# law_service

./: .gitignore  README.md  review.md
backend/: .env.example  RAG_AND_DOCUMENT_PIPELINE.md  README.md  main.py  plan.md  pyproject.toml
backend/case_management/: __init__.py  legal_basis.py  schemas.py  service.py
backend/case_management/seed/: case-detail.json  cases.json  documents.json  legal-basis.json  questions.json
backend/documents/: __init__.py  evaluation.py  evidence.py  gemini.py  generator.py  planning.py  service.py
backend/eval/: __init__.py  __main__.py  dataset.py  generation.py  reporting.py  retrieval.py  runner.py  safety.py  schemas.py  utils.py
backend/graph/: __init__.py  store.py
backend/ingestion/: __init__.py  mock_data.py  open_law_api.py  service.py  transformers.py
backend/schemas/: __init__.py  api.py  common.py  corpus.py  documents.py  related_articles.py
backend/search/: __init__.py  evaluation.py  goldset.py  pipeline.py  retrieval.py  routing.py  store.py  structuring.py
backend/storage/: __init__.py  id_policy.py  observability.py  repository.py  vector.py
backend/tests/: fake_gemini.py  test_document_generation_service.py  test_eval_module.py  test_frontend_case_management_api.py  test_idempotent_ingestion.py  test_mock_data_rag_bootstrap.py  test_related_article_service.py  test_schemas.py  test_version_selection.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
frontend/docs/: task.md
frontend/src/: App.tsx  index.css
scripts/: dev.sh
(+49 files in other folders)
